2008-04-18  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/Makefile.am
	  src/connection-editor/page-ppp.c
	  src/connection-editor/page-ppp.h
	  src/connection-editor/ce-page-ppp.glade
		- Add PPP settings page

	* src/connection-editor/page-dsl.c
		- (validate): need the PPP setting to valide the PPPoE setting

	* src/connection-editor/nm-connection-list.c
		- (create_new_connection_for_type): add PPP settings for mobile broadband
			and DSL

	* src/connection-editor/nm-connection-editor.c
		- (nm_connection_editor_set_connection): add PPP page for DSL and
			mobile broadband

2008-04-17  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/nm-connection-editor.c
		- (connection_editor_update_connection): save 'autoconnect' back to the
			connection

2008-04-16  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/ce-page-wired.glade
	  src/connection-editor/ce-page-wireless.glade
	  src/connection-editor/page-wireless.c
		- Fix up option constraints on MTU, Rate, and TX power
		- Use "automatic" not "default"
		- Add units labels to MTU, Rate, and TX Power

	* src/connection-editor/nm-connection-editor.c
		- (ce_spin_output_with_default): use 'automatic' not 'default'

2008-04-16  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/page-dsl.c
	  src/connection-editor/page-mobile.c
		- fetch secrets from the keyring to populate entries with

2008-04-16  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/ce-mobile-wizard.glade
	  src/connection-editor/mobile-wizard.c
	  src/connection-editor/mobile-wizard.h
	  src/connection-editor/Makefile.am
	  po/POTFILES.in
		- Add connection type chooser

	* src/connection-editor/nm-connection-list.c
		- (create_new_connection_for_type): handle mobile broadband too

2008-04-16  Dan Williams  <dcbw@redhat.com>

	* src/utils/utils.c
		- (utils_get_device_description): fix space addition when munging
			device descriptions

2008-04-15  Dan Williams  <dcbw@redhat.com>

	* src/ap-menu-item.c